--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
     <script language="javascript" type="text/javascript" src="lib/p5.js"></script>
-    <script language="javascript" type="text/javascript" src="parametricLines.js"></script>
+    <script language="javascript" type="text/javascript" src="scripts/sketch.js"></script>
   </head>
   
   <body>
     <div class=menuContainer>
       <div class="menu"><a href="index.html">home</a></div>
-      <div class="menu"><a href="branches.html">branches</a></div>
-      <div class="menu"><a href="polarCoord.html">polar</a></div>
+      <div class="menu"><a href="templates/parametricLines.html">parametric</a></div>
+      <div class="menu"><a href="templates/polarCoordinates.html">branches</a></div>
+      <div class="menu"><a href="templates/equalizer.html">contributers</a></div>
     </div>
   </body>
 </html>
