multiple paths using beans

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       <div class="menu"><a href="index.html">Draw image</a></div>
       <div class="menu"><a href="templates/parametricLines.html">Parametric Lines</a></div>
       <div class="menu"><a href="templates/polarCoordinates.html">Polar shapes</a></div>
-      <div class="menu"><a href="templates/equalizer.html">Equalizer</a></div>
+      <div class="menu"><a href="templates/equalizer.html">Equalizer</a>
+      </div>
+      <div class="menu"><a href="templates/dottedBrowser.html">Dotted browser</a></div>
+      <div class="menu"><a href="templates/paths.html">Paths</a></div>
     </div>
   </body>
 </html>
